# mamabloemetjes

./: .gitignore  LICENSE  PERFORMANCE_OPTIMIZATIONS.md  README.md
.github/workflows/: ci.yaml
apps/backend/: Cargo.toml  Shuttle.toml  setup_database.sql  usage_example.rs
apps/backend/docs/: SEARCH_SYSTEM.md
apps/backend/migrations/: 001_create_search_analytics.sql  cart_items.sql  carts.sql  contact_forms.sql  discount_promotions.sql  featured_products.sql  inventory.sql  order_lines.sql  orders.sql  product.sql  product_images.sql  search_analytics.sql  users.sql
apps/backend/src/: lib.rs  main.rs  secrets.rs
apps/backend/src/actions/delete/: order.rs
apps/backend/src/actions/get/: discount.rs  mod.rs  order.rs  order_line.rs  product.rs  search.rs
apps/backend/src/actions/get/product/: featured.rs  mod.rs  product_all.rs  product_id.rs
apps/backend/src/actions/post/: contact.rs  discount.rs  mod.rs  order.rs
apps/backend/src/actions/update/: account.rs  discount.rs  mod.rs  order.rs
apps/backend/src/email/: mod.rs
apps/backend/src/middleware/: auth.rs  cors.rs  mod.rs  request_logger.rs
apps/backend/src/pool/: connect.rs  mod.rs
apps/backend/src/response/: app_response.rs  error.rs  mod.rs  success.rs
apps/backend/src/routes/: auth.rs  cart.rs  health_check.rs  mod.rs  promotion.rs  user.rs
apps/backend/src/routes/get/: featured.rs  inventory.rs  mod.rs  order.rs  order_lines.rs  product.rs  search.rs
apps/backend/src/routes/order/: get_orders.rs  get_products.rs  mod.rs  order.rs
apps/backend/src/routes/post/: contact.rs  mod.rs  order.rs
apps/backend/src/routes/product/: get_products.rs  mod.rs
apps/backend/src/services/: auth.rs  cart_service.rs  inventory_service.rs  mod.rs  pricing_service.rs  product_service.rs  promotion_service.rs  user_service.rs
apps/backend/src/services/search/: mod.rs  product_search.rs  search_analytics.rs  search_suggestions.rs
apps/backend/src/structs/: cart.rs  contact.rs  customer.rs  enums.rs  implementations.rs  inventory.rs  jwt.rs  mod.rs  order.rs  product.rs  promotion.rs  user.rs
apps/backend/src/utils/: calculate.rs  discount.rs  mod.rs  tax.rs
apps/backend/src/validate/: address.rs  auth.rs  business.rs  mod.rs  order.rs  structs.rs
apps/backend/tests/: order_api_tests.rs  promotion_tests.rs  tax_tests.rs  test_jsonb.rs  unit_tests.rs  validation_tests.rs
apps/frontend/: .prettierignore  ACCOUNT_MANAGEMENT_UPDATE.md  README.md  jest.config.js  next.config.ts  package.json
apps/frontend/__tests__/: currency.test.ts  precision-comparison.test.ts
apps/frontend/app/: globals.css  layout.tsx  not-found.tsx  page.tsx
apps/frontend/components/: Button.tsx  CartHeader.tsx  CartPromotionSummary.tsx  ContactModal.tsx  DiscountIndicator.tsx  FloatingElements.tsx  Footer.tsx  Input.tsx  NameBanner.tsx  Navigation.tsx  NotificationBanner.tsx  OptimizedImage.tsx  OrderCard.tsx  OrderDetailModal.tsx  (+8 more)
(+53 files in other folders)
