[package]
name = "backend_test"
version = "0.1.0"
edition = "2024"

[dependencies]
axum = "0.8.4"
chrono = { version = "0.4", features = ["serde", "clock"] }
serde = { version = "1.0.219", features = ["derive"] }
serde_json = "1.0"
tokio = { version = "1.47.1", features = ["full"] }
thiserror = "1.0"
tracing-subscriber = "0.3"
uuid = { version = "1.0", features = ["v4", "serde"] }
dotenv = "0.15.0"
sqlx = { version = "0.8.6", features = [
    "postgres",
    "runtime-tokio",
    "tls-native-tls",
    "json",
    "uuid",
    "chrono",
    "rust_decimal",
] }
rust_decimal = { version = "1.36", features = ["serde-with-str"] }
validator = { version = "0.20.0", features = ["derive"] }
regex = "1.7"

tracing = "0.1"
bytes = "1.5"
http-body-util = "0.1"
once_cell = "1.21.3"
rust_decimal_macros = "1.37.1"

[dev-dependencies]
tower = { version = "0.5", features = ["util"] }
