[package]
name = "mamabloemetjes_backend"
version = "0.1.0"
edition = "2024"

[dependencies]
axum = "0.8.4"
chrono = { version = "0.4", features = ["serde", "clock"] }
serde = { version = "1.0.219", features = ["derive"] }
serde_json = "1.0"
tokio = { version = "1.47.1", features = ["full"] }
thiserror = "2.0.16"
tracing-subscriber = "0.3"
uuid = { version = "1.0", features = ["v4", "serde"] }

sqlx = { version = "0.8.6", features = [
    "postgres",
    "runtime-tokio-rustls",
    "json",
    "uuid",
    "chrono",
    "rust_decimal",
] }
rust_decimal = { version = "1.36", features = ["serde-with-str"] }
validator = { version = "0.20.0", features = ["derive"] }
regex = "1.7"
argon2 = "0.5.3"
password-hash = "0.5"
rand = "0.9.2"
jsonwebtoken = "9.3.1"
time = { version = "0.3", features = ["macros", "serde"] }
tracing = "0.1"
once_cell = "1.21.3"
rust_decimal_macros = "1.37.1"
tower-http = { version = "0.6.6", features = ["cors"] }
shuttle-runtime = "0.56.0"
shuttle-axum = "0.56.0"

[dev-dependencies]
tower = { version = "0.5", features = ["util"] }
